# QuickTools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEBUG.md  README.md
QuickTools/: CMakeLists.txt  QuickTools.pro  croprect.h
QuickTools/ImageCropper/: CMakeLists.txt  croprect.cpp  croprect.h  imageitem.cpp  imageitem.h  imageview.cpp  imageview.h  macro.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/: assets.qrc
assets/design/: QuickTools.xmind  时序图.drawio  架构图.drawio  用例图.drawio  直方图工具时序图.drawio  类图.drawio
cmake/: ConfigBuildTree.cmake  ConfigCompiler.cmake  ConfigPython.cmake  ConfigQT.cmake  ConfigSQLite.cmake  ConfigVersion.cmake  PrintConfig.cmake
docs/: Doxyfile.in
docs/imgproc/: ImageHistogram.md
src/: CMakeLists.txt
src/MainWindow/: CMakeLists.txt  main.cpp
src/MainWindow/qml/global/: QuickToolsItems.qml  qmldir
src/MainWindow/qml/page/: ImageProcess.qml
src/MainWindow/qml/window/: MainWindow.qml
src/common/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  DeviceManager.cpp  LinuxCCrashHandler.cpp  Logger.cpp  Singleton.h  Utils.cpp  Utils.h  WindowsCCrashHandler.cpp
src/common/include/common/: CrashHandler.h  DeviceManager.h  LinuxCCrashHandler.h  Logger.h  Singleton.h  Utils.h  WindowsCCrashHandler.h  sqlite_sink.h
src/core/: AbstractCVTool.cpp  AbstractCVTool.h  AbstractCVToolParam.cpp  AbstractCVToolParam.h  AbstractPythonTool.cpp  AbstractPythonTool.h  AbstractQuickTool.cpp  AbstractQuickTool.h  AbstractQuickToolParam.cpp  AbstractQuickToolParam.h  AbstractQuickToolParams.cpp  AbstractQuickToolParams.h  AbstractQuickToolSettings.cpp  AbstractQuickToolSettings.h  AbstractcvToolParam.cpp  AbstractcvToolParam.h  CMakeLists.txt  CVTool.cpp  CVToolImage.cpp  CVToolParam.cpp  CVToolParam.h  CVToolParams.cpp  CVToolROI.cpp  CVToolROI.h  CVToolSettings.cpp  CVToolSettings.h  CVToolShape.cpp  CoreGlobal.h  Error.cpp  GlobalSettings.cpp  ImageProvider.cpp  Logger.cpp  PythonInterface.cpp  PythonManager.cpp  PythonManager.h  PythonTool.cpp  QuickTool.cpp  QuickToolHelper.cpp  QuickToolHelper.h  QuickToolManager.cpp  (+14 more)
src/core/include/core/: AbstractPythonTool.h  AbstractQuickTool.h  AbstractQuickToolParams.h  AbstractQuickToolSettings.h  CVTool.h  CVToolImage.h  CVToolParams.h  CVToolROI.h  CVToolSettings.h  CVToolShape.h  Error.h  GlobalSettings.h  ImageProvider.h  Logger.h  PythonInterface.h  PythonManager.h  PythonTool.h  QuickTool.h  QuickToolConfig.h  QuickToolManager.h  QuickToolParams.h  QuickToolSettings.h  QuickToolType.h  RuntimeParams.h
src/core/priv/: Predefined.cpp  Predefined.h
src/deeplearning/: CMakeLists.txt  DeepLearningRegister.cpp
src/deeplearning/detection/yolov8/: Yolov8.cpp  Yolov8.qml
src/deeplearning/include/deeplearning/: DeepLearningGlobal.h  DeepLearningRegister.h
src/imgproc/: CMakeLists.txt  ImgprocRegister.cpp  T_ImageProcessWindow.qml  imagehistogram.cpp  imagehistogram.h  imgproc_global.h  imgprocregister.cpp  imgprocregister.h
src/imgproc/imagehistogram/: HistogramView.qml  ImageHistogram.cpp  ImageHistogram.h  ImageHistogram.qml  imagehistogram.cpp  imagehistogram.h
src/imgproc/imagehistogram/components/: DropImageArea.qml  HistogramView.qml
src/imgproc/include/imgproc/: ImageHistogram.h  ImgprocRegister.h
src/imgproc/pytest/: PyTest.cpp  PyTest.h  PyTest.qml
src/imgproc/qml/: ImageHistogram.qml
src/py_module/: mytest.py  pytest.py  yolov8_detection.py
src/quicktools/: App.qml  CMakeLists.txt  main.cpp
src/quicktools/component/: ToolItem.qml  ToolsList.qml
src/quicktools/global/: DetectionItems.qml  ImageProcessItems.qml  QuickToolsFooter.qml  QuickToolsItems.qml  RecentlyItems.qml  SamplesItems.qml  qmldir
src/quicktools/page/: DetectionPage.qml  Home.qml  ImageClassificationPage.qml  ImageProcessPage.qml  SamplesPage.qml  SegmentationPage.qml  SettingsPage.qml  T_Page.qml  ToolManagerPage.qml
src/quicktools/qml/: App.qml
src/quicktools/qml/component/: ToolItem.qml  ToolsList.qml
src/quicktools/qml/global/: ImageProcessItems.qml  QuickToolsItems.qml
src/quicktools/qml/page/: Home.qml  ImageProcessPage.qml  T_Page.qml
src/quicktools/qml/window/: MainWindow.qml  T_Window.qml
src/quicktools/window/: MainWindow.qml
src/quickui/: App.cpp  App.h  CMakeLists.txt  Def.h  QuickApp.cpp  QuickApp.h  QuickColor.cpp  QuickColor.h  QuickFont.cpp  QuickFont.h  QuickIconsFont.h  QuickROI.cpp  QuickROI.h  QuickShape.cpp  QuickShape.h  QuickTools.cpp  QuickTools.h  Singleton.h  UITools.cpp  UITools.h  macros.h  quickcolor.cpp  quickcolor.h  quickfont.cpp  quickfont.h  quickiconsfont.h  singleton.h
src/quickui/components/: T_CVFooter.qml  T_CVHeader.qml  T_CVLToolBar.qml  T_CVLToolPanel.qml  T_CVWIndow.qml
src/quickui/controls/: QuickArea.qml  QuickBadge.qml  QuickButton.qml  QuickClip.qml  QuickComboBox.qml  QuickContentDialog.qml  QuickContentPage.qml  QuickControl.qml  QuickControlBackground.qml  QuickDivider.qml  QuickDoubleSpinBox.qml  QuickEditableCircle.qml  QuickEditableRect.qml  QuickExpander.qml  QuickFilledButton.qml  QuickFocusRectangle.qml  QuickFrame.qml  QuickIcon.qml  QuickInfoBar.qml  QuickItemDelegate.qml  QuickMenu.qml  QuickMenuItem.qml  QuickNavigationView.qml  QuickPage.qml  QuickPaneItem.qml  QuickPaneItemEmpty.qml  QuickPaneItemExpander.qml  QuickPaneItemHeader.qml  QuickPaneItemSeparator.qml  QuickPopup.qml  QuickProgressBar.qml  QuickProgressRing.qml  QuickScalableImage.qml  QuickScaleableImage.qml  QuickScrollBar.qml  QuickScrollablePage.qml  QuickShadow.qml  QuickShapeRepeater.qml  QuickSlider.qml  QuickSpinBox.qml  (+7 more)
src/quickui/window/: T_CVWindow.qml  T_NLPWindow.qml  T_Window.qml
src/samples/: CMakeLists.txt  PyTest.cpp  PyTest.qml  SamplesRegister.cpp
src/samples/PyTest/: PyTest.cpp  PyTest.h  PyTest.qml
src/samples/include/samples/: PyTest.h  SamplesGlobal.h  SamplesRegister.h
src/toolstypes/: CMakeLists.txt  abstractquicktool.cpp  abstractquicktool.h  quicktoolstypes_global.h
tools/: link_dependencies.bat  opencv_symlink.py  python_symlink.py  quicktools_symlink.py  sqlite_symlink.py  utils.py
(+60 files in other folders)
